argocd/Rollout/canary/with-alb/service-stable.yaml
kind: Service
apiVersion: v1
metadata:
  name: stable-service
spec:
  selector:
    app: canary
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
